[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "retro-fallback-iclr24"
version = "0.1.0"
authors = [
    {name = "Austin Tripp"},
]
description = "Official implentation of retro-fallback for ICLR 2024"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
dependencies = [
    "syntheseus>=0.4.0",
    "syntheseus-retro-star-benchmark",
    "tueplots",
    "numpy",
    "rdkit",
    "pandas",
    "scipy",
    "tqdm",
]

[project.urls]
Repository = "https://github.com/AustinT/retro-fallback-iclr24"

[tool.setuptools.packages.find]
where = ["."]
include = ["retro_fallback_iclr24*"]
exclude = ["plots", "misc"]
namespaces = false

[tool.setuptools.package-data]
"retro_fallback_iclr24" = ["py.typed"]

[tool.black]
line-length = 120
include = '\.pyi?$'

[tool.mypy]
python_version = 3.9  # pin modern python version
ignore_missing_imports = true

[tool.ruff]
line-length = 120
# Check https://beta.ruff.rs/docs/rules/ for full list of rules
lint.select = [
  "E", "W",  # pycodestyle
  "F",  # Pyflakes
  "I",  # isort
]
lint.ignore = [
  # W605: invalid escape sequence -- triggered by pseudo-LaTeX in comments
  "W605",
  # E501: Line too long -- triggered by comments and such. black deals with shortening.
  "E501",
  # E741:  Do not use variables named 'l', 'o', or 'i' -- disagree with PEP8
  "E741",
]
